[tool.poetry]
name = "nice-agents"
version = "0.1.0"
description = ""
authors = ["Petur Einarsson <peture01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.31.1"
python-dotenv = "^1.0.1"
azure-identity = "^1.16.0"
langchain-openai = "^0.1.8"
langchain = "^0.2.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
